2003-01-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Parser.java (parseCommand,
	commandComplete):
	The info complete subcommand now passes all
	the Tcl regression tests. [Bug 223973]

2003-01-08  Mo DeJong  <mdejong@users.sourceforge.net>

	Re-implement ref counting system for Jacl to
	more closely match to C implementation.
	Deprecate TclObject.takeExclusive() method and
	replace it with new TclObject.duplicate() method.

	* diffs.txt: Remove takeExclusive, add duplicate.
	* new_features.txt: Mention new TclObject.duplicate()
	method and when it should be used.
	* docs/cFunctions.html: Add Tcl_DuplicateObj entry.
	* docs/TclJavaLib/TclObject.htm: Doc duplicate
	and remove docs for takeExclusive method. Add
	example of how to use the duplicate method.
	* src/jacl/tcl/lang/Expression.java (ExprLex):
	Invoke release() when done with a ParseResult.
	* src/jacl/tcl/lang/Interp.java (Interp, setResult,
	resetResult, appendElement):
	Preserve the m_nullResult twice so that it is
	actually shared. This bug did not show up
	before because objects were being copied
	every time instead of when shared.
	When setting a result, don't decrement or
	increment the ref count of the m_nullResult.
	Check for illegal decrement of m_nullResult.
	Replace use of takeExclusive with duplicate.
	* src/jacl/tcl/lang/LappendCmd.java (cmdProc):
	Replace use of takeExclusive with duplicate.
	* src/jacl/tcl/lang/LinsertCmd.java (cmdProc):
	Replace use of takeExclusive with duplicate.
	* src/jacl/tcl/lang/LreplaceCmd.java (cmdProc):
	Replace use of takeExclusive with duplicate.
	* src/jacl/tcl/lang/LsortCmd.java (cmdProc):
	Replace use of takeExclusive with duplicate.
	* src/jacl/tcl/lang/ParseAdaptor.java (parseBraces):
	Invoke string constructor so ref count is incremented.
	* src/jacl/tcl/lang/ParseResult.java (ParseResult,
	release): Increment ref count of value unless
	called with a TclObject argument. Add release
	method that will let go of held ref.